--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Wikipedia App</title>
+  <title>📖 🌐</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+<header>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Globe_and_books_mgx.svg/2000px-Globe_and_books_mgx.svg.png" alt="logo image">
+  <div>
+    <input type="text" class="searchTerm">
+    <button class="searchButton">Search</button>
+    <button class="randomButton">Random</button>
+  </div>
+</header>
+<ul class="output"></ul>
 
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
