--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>📖 🌐</title>
+  <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+    crossorigin="anonymous">
 </head>
+
 <body>
-<header>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Globe_and_books_mgx.svg/2000px-Globe_and_books_mgx.svg.png" alt="logo image">
-  <div>
-    <input type="text" class="searchTerm">
-    <button class="searchButton">Search</button>
-    <button class="randomButton">Random</button>
-  </div>
-</header>
-<ul class="output"></ul>
+  <header>
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Globe_and_books_mgx.svg/2000px-Globe_and_books_mgx.svg.png"
+      alt="logo image">
+    <div>
+        <input type="text" class="searchTerm">
+      <button class="searchButton"><i class="fa fa-search"></i></button>
+      <button class="randomButton"><i class="fas fa-random"></i></button>
+    </div>
+  </header>
+  <ul class="output"></ul>
 
 
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
