--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body>
   <header>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Globe_and_books_mgx.svg/2000px-Globe_and_books_mgx.svg.png"
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/8/80/Wikipedia-logo-v2.svg/1200px-Wikipedia-logo-v2.svg.png"
       alt="logo image">
     <div>
-        <input type="text" class="searchTerm">
+        <input type="text" class="searchTerm fa fa-search" placeholder="Search Here...">
       <button class="searchButton"><i class="fa fa-search"></i></button>
       <button class="randomButton"><i class="fas fa-random"></i></button>
     </div>
